--- a/src/scenes/comment.fxml
+++ b/src/scenes/comment.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="245.0" prefWidth="305.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="243.0" prefWidth="446.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="25.0" layoutY="221.0" mnemonicParsing="false" text="Speichern" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="200.0" />
       <Button layoutX="106.0" layoutY="221.0" mnemonicParsing="false" text="Abbrechen" AnchorPane.leftAnchor="105.0" AnchorPane.topAnchor="200.0" />
-      <ListView fx:id="commentListView" layoutX="25.0" layoutY="65.0" prefHeight="125.0" prefWidth="255.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
-      <TextField fx:id="commentTextField" layoutX="25.0" layoutY="150.0" prefHeight="25.0" prefWidth="255.0" promptText="Kommentar" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="24.666666666666657" AnchorPane.topAnchor="150.0" />
+      <TextArea fx:id="commentTextArea" layoutX="25.0" layoutY="106.0" prefHeight="80.0" prefWidth="396.0" promptText="Ihr Kommentar" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="105.0" />
+      <TextField layoutX="19.0" layoutY="21.0" promptText="Betreff" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
+      <TextField fx:id="dateTextField" disable="true" layoutX="19.0" layoutY="60.0" promptText="Zeitstempel" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="65.0" />
    </children>
 </AnchorPane>
